--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wellness and Self-Care</title>
+    <title>Wellness & Self-Care</title>
 
     <!-- CSS -->
     <style>
@@ -14,126 +14,143 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f2f2f2;
+            background-color: #f5f5f5;
         }
 
         /* Header styles */
         header {
-            background-color: #4caf50;
+            background-color: #6a8d6a;
             color: white;
-            padding: 10px 20px;
+            padding: 15px;
+            text-align: center;
+        }
+
+        /* Navigation menu */
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline-block;
+            margin-right: 20px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+        }
+
+        /* Main content */
+        main {
+            padding: 20px;
+        }
+
+        .product-section {
             display: flex;
-            justify-content: space-between;
+            flex-direction: column;
             align-items: center;
         }
 
-        header nav a {
-            color: white;
-            text-decoration: none;
-            margin-right: 15px;
+        .product-section img {
+            width: 200px;
+            height: auto;
+            margin-bottom: 20px;
         }
 
-        /* Body section styles */
-        .body-section {
-            padding: 20px;
-            text-align: center;
-            background-color: #e0f7fa;
+        .product-section h3 {
+            color: #333;
         }
 
-        .body-section img {
-            width: 300px;
-            border-radius: 10px;
-            margin-bottom: 10px;
-        }
-
-        /* Form section styles */
+        /* Form section */
         .form-section {
             padding: 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            margin: 20px auto;
-            width: 50%;
+            background-color: #e9f5e9;
+            border-radius: 10px;
+            margin-top: 20px;
         }
 
         .form-section h2 {
-            margin-top: 0;
+            margin-bottom: 10px;
         }
 
-        .form-section form input,
-        .form-section form textarea {
-            display: block;
+        .form-section input[type="text"],
+        .form-section input[type="email"] {
+            padding: 8px;
             width: 100%;
             margin-bottom: 10px;
-            padding: 10px;
-            border-radius: 5px;
             border: 1px solid #ccc;
+            border-radius: 5px;
         }
 
-        .form-section form button {
-            background-color: #4caf50;
+        .form-section button {
+            background-color: #6a8d6a;
             color: white;
-            padding: 10px;
+            padding: 10px 15px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
         }
 
-        .form-section form button:hover {
-            background-color: #388e3c;
-        }
-
         /* Footer styles */
         footer {
-            background-color: #4caf50;
+            background-color: #6a8d6a;
             color: white;
             text-align: center;
-            padding: 10px 0;
+            padding: 10px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
         }
     </style>
-</head>
-
-<body>
-    <!-- Header -->
-    <header>
-        <h1>Wellness & Self-Care</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Products</a>
-            <a href="#">About</a>
-        </nav>
-    </header>
-
-    <!-- Body section -->
-    <div class="body-section">
-        <h2>Discover our Wellness and Self-Care Products</h2>
-        <img src="https://via.placeholder.com/300" alt="Wellness and Self-Care">
-        <p>Explore our range of products designed to enhance your well-being and self-care routines. From essential oils to spa kits, find everything you need for a rejuvenating experience.</p>
-    </div>
-
-    <!-- Form section -->
-    <div class="form-section">
-        <h2>Contact Us</h2>
-        <form id="contactForm">
-            <input type="text" id="name" name="name" placeholder="Your Name" required>
-            <input type="email" id="email" name="email" placeholder="Your Email" required>
-            <textarea id="message" name="message" placeholder="Your Message" required></textarea>
-            <button type="submit">Submit</button>
-        </form>
-    </div>
-
-    <!-- Footer -->
-    <footer>
-        <p>© 2024 Wellness & Self-Care. All Rights Reserved.</p>
-    </footer>
 
     <!-- JavaScript -->
     <script>
-        document.getElementById('contactForm').addEventListener('submit', function(event) {
+        // Function to handle form submission
+        function handleFormSubmission(event) {
             event.preventDefault();
-            alert('Form submitted! Thank you for getting in touch.');
-            // You can add form submission logic here
-        });
+            const name = document.getElementById('name').value;
+            const email = document.getElementById('email').value;
+            alert(`Thank you, ${name}! We will contact you at ${email}.`);
+        }
     </script>
+</head>
+
+<body>
+    <!-- Header Section -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Main Content -->
+    <main>
+        <div class="product-section">
+            <img src="wellness-products.jpg" alt="Wellness Products">
+            <h3>Wellness & Self-Care Products</h3>
+            <p>Explore our range of wellness and self-care products designed to enhance your health and well-being.</p>
+        </div>
+
+        <!-- Form Section -->
+        <div class="form-section">
+            <h2>Contact Us</h2>
+            <form id="contactForm" onsubmit="handleFormSubmission(event)">
+                <input type="text" id="name" name="name" placeholder="Name" required><br>
+                <input type="email" id="email" name="email" placeholder="Email" required><br>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    </main>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 Wellness & Self-Care. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
