--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wellness & Self-Care</title>
 
     <!-- CSS -->
@@ -19,8 +19,7 @@
 
         /* Header styles */
         header {
-            background-color: #6a8d6a;
-            color: white;
+            background-color: #4a6a4a; /* Use a darker background color */
             padding: 15px;
             text-align: center;
         }
@@ -31,6 +30,7 @@
             padding: 0;
             display: flex;
             justify-content: center;
+            margin: 0;
         }
 
         nav ul li {
@@ -38,24 +38,21 @@
         }
 
         nav ul li a {
-            color: #f5f5f5; /* Use a lighter text color to increase contrast */
+            color: #ffffff; /* Use white text color for better contrast */
             text-decoration: none;
-            padding: 8px 12px;
-            transition: background-color 0.3s ease;
+            padding: 10px 15px;
             border-radius: 5px;
+            transition: background-color 0.3s ease;
         }
 
         /* Add hover effect for better visibility */
         nav ul li a:hover {
-            background-color: #467046; /* Change background color on hover */
-            color: white; /* Keep text color white */
+            background-color: #6a8d6a; /* Change background color on hover */
         }
-
-        /* Main content and other styles ... */
 
         /* Footer styles */
         footer {
-            background-color: #6a8d6a;
+            background-color: #4a6a4a;
             color: white;
             text-align: center;
             padding: 10px;
